fixed problems with previous code and set up for lecture

--- a/index.HTML
+++ b/index.HTML
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">  
+    <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./assets/css/style.css">
-
-    <head>
-         <meta charset="UTF-8">
-         <title>portfolio</title>
+     <meta charset="UTF-8">
+     <title>portfolio</title>
     </head>
 
-        <body>
+    <body>
             <header>
-            <nav>
-                <ul>
-                    <li><a href="">Github</a></li>
-                    <li><a href="">Portfolio</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            <header>
-            <main class="">
-                <h1> My portfolio</h1>
-                    <div class="main-box">
-                        <div class="second-box">
-                             <div class="third-box">
-                                  <div class="fourth-box">
-                                     <div class="fifth-box">
-                    
-                                    </div>
-                                 </div>
-                            </div>
-                        </div>
-                    </div>
+                <nav>
+                    <ul>
+
+                        <li><a href="">Github</a></li>
+                        <li><a href="">Portfolio</a></li>
+                        <li><a href="">Contact</a></li>
+
+                    </ul>
+                </nav>
+             </header>
+
+            <main>
+                <section>
+                    <h1> My portfolio</h1>
+                    <img class="" src="URL">
+                    <p> paragraph</p>
+                <section>
+                <section>
+                    <form>
+                        <label for="name">Name</label> 
+                        <input id="name" type="text" name="name" placeholder="Enter your name">
+                        <label for="email">E-mail</label> 
+                        <input id="email" type="text" name="email" placeholder="Enter your email">
+                    </form>
+                </section>
             </main>
+            
             <footer>
 
             </footer>
-         </body>
+    </body>
 
 </html>
