--- a/index.HTML
+++ b/index.HTML
@@ -28,7 +28,7 @@
                     <p> paragraph</p>
                 <section>
                 <section>
-                    <form>
+                    <form class="contact-form">
                         <label for="name">Name</label> 
                         <input id="name" type="text" name="name" placeholder="Enter your name">
                         <label for="email">E-mail</label> 
